force-app/main/default/objects/Ham_Home_Page_Component_Config__mdt/Ham_Home_Page_Component_Config__mdt.object-meta.xml
<CustomObject>
    <description>Single metadata object to control the behavior and data source for many different Lightning Web Components (LWCs) present on portal home page</description>
    <label>Ham Home Page Component Config</label>
    <pluralLabel>Ham Home Page Component Configs</pluralLabel>
</CustomObject>