force-app/main/default/objects/Ham_Home_Page_Component_Config__mdt/fields/CMP_Key__c.field-meta.xml
<CustomField>
    <fullName>CMP_Key__c</fullName>
    <description>LWC Lookup Key. The unique identifier used by the component.</description>
    <inlineHelpText>LWC Lookup Key. The unique identifier used by the component.</inlineHelpText>
    <label>Component Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>