force-app/main/default/objects/Ham_Home_Page_Component_Config__mdt/fields/CMP_Type__c.field-meta.xml
<CustomField>
    <fullName>CMP_Type__c</fullName>
    <description>Controls Apex logic (GivingDay, News, Events, Gallery).</description>
    <inlineHelpText>Controls Apex logic (GivingDay, News, Events, Gallery).</inlineHelpText>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GivingDay</fullName>
                <default>true</default>
                <label>GivingDay</label>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Gallery</fullName>
            </value>
            <value>
                <fullName>Volunteer Opp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>