force-app/main/default/objects/Ham_Home_Page_Component_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Global toggle to enable/disable the configuration.</description>
    <inlineHelpText>Global toggle to enable/disable the configuration.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>