force-app/main/default/objects/Ham_Home_Page_Component_Config__mdt/fields/Max_Records__c.field-meta.xml
<CustomField>
    <fullName>Max_Records__c</fullName>
    <description>Sets the SOQL LIMIT</description>
    <inlineHelpText>Sets the SOQL LIMIT</inlineHelpText>
    <label>Max Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>