force-app/main/default/objects/Ham_Home_Page_Component_Config__mdt/fields/Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>Sort_Field__c</fullName>
    <description>Field API Name for ORDER BY.</description>
    <inlineHelpText>Field API Name for ORDER BY.</inlineHelpText>
    <label>Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>