force-app/main/default/objects/Ham_Home_Page_Component_Config__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>API Name of the data source object (e.g., Listing__c).</description>
    <inlineHelpText>API Name of the data source object (e.g., Listing__c).</inlineHelpText>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>