force-app/main/default/objects/Ham_Home_Page_Component_Config__mdt/fields/WHERE_Clause__c.field-meta.xml
<CustomField>
    <fullName>WHERE_Clause__c</fullName>
    <description>The full SOQL WHERE clause (e.g., Category__c = &apos;News&apos; AND Is_Active__c = TRUE).</description>
    <inlineHelpText>The full SOQL WHERE clause (e.g., Category__c = &apos;News&apos; AND Is_Active__c = TRUE).</inlineHelpText>
    <label>WHERE Clause</label>
    <type>TextArea</type>
</CustomField>